<?xml version="1.0" encoding="utf-8"?><!--
  ~  -license-start
  ~  eu-digital-green-certificates / dgca-wallet-app-android
  ~  -
  ~  Copyright (C) 2021 T-Systems International GmbH and all other contributors
  ~  -
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~  -license-end
  ~
  ~  Created by osarapulov on 5/12/21 2:57 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_half_margin"
    android:background="@color/rule_card_background_color"
    android:paddingStart="@dimen/default_quarter_margin"
    android:paddingTop="@dimen/default_half_margin"
    android:paddingEnd="@dimen/default_quarter_margin"
    android:paddingBottom="@dimen/default_half_margin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ruleVerificationResultHeader"
        style="@style/TextAppearance.Dgca.RuleTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/identifier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Failed"
        tools:textColor="@color/red" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/identifierTitle"
        style="@style/TextAppearance.Dgca.RuleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identifier"
        app:layout_constraintBottom_toBottomOf="@id/identifier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/identifier" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/typeTitle"
        style="@style/TextAppearance.Dgca.RuleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintBottom_toBottomOf="@id/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/type" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detailsTitle"
        style="@style/TextAppearance.Dgca.RuleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="@id/details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/details" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/fromBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="identifierTitle,typeTitle, detailsTitle" />

    <TextView
        android:id="@+id/identifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_double_margin"
        android:layout_marginTop="@dimen/default_half_margin"
        app:layout_constraintBottom_toTopOf="@id/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fromBarrier"
        app:layout_constraintTop_toBottomOf="@id/ruleVerificationResultHeader"
        tools:text="Rule description" />

    <TextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_margin"
        app:layout_constraintBottom_toTopOf="@id/details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/identifier"
        app:layout_constraintTop_toBottomOf="@id/identifier"
        tools:text="Really long current description. Really long current description. Really long current description." />

    <TextView
        android:id="@+id/details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_margin"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/identifier"
        app:layout_constraintTop_toBottomOf="@id/type" />

</androidx.constraintlayout.widget.ConstraintLayout>